--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Private files
 # The following files contain your database credentials and other personal data.
-
+# 
 config/settings.*.php
 
 # Cache, temp and generated files
@@ -32,3 +32,4 @@ admin-dev/import/
 download/
 /img/*
 upload/
+#copy and paste should be add
